# EitaaYar

./: .gitignore  LICENSE  README.md  docs.html  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml  publish.yml  test.yml
EitaaYar/: __init__.py
examples/: basic_usage.py  error_handling.py
tests/: __main__.py  conftest.py  test_errors.py
