[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eitaayar"
version = "1.0.0"
description = "A comprehensive Python client for EitaaYar.ir API"
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name = "Ali NabiPour", email = "noyan.joun.89@gmail.com" }
]
keywords = ["eitaayar", "eitaa", "api", "client", "bot", "messaging", "iran"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/Ali-Nabi-Pour/Eitaayar"
Bug_Reports = "https://github.com/Ali-Nabi-Pour/Eitaayar/issues"
Source = "https://github.com/Ali-Nabi-Pour/Eitaayar"

[tool.setuptools]
packages = ["eitaayar"]

[tool.setuptools.package-dir]
eitaayar = "eitaayar"
